<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/teal_200"/>
    <item
        android:id="@+id/schedule"
        android:icon="@drawable/ic_baseline_event_note"
        android:title="@string/schedule"
        app:cnb_iconColor="@color/teal_200"/>
    <item
        android:id="@+id/notes"
        android:icon="@drawable/ic_baseline_list_alt"
        android:title="@string/notes"
        app:cnb_iconColor="@color/teal_200" />
    <item
        android:id="@+id/selected"
        android:icon="@drawable/ic_baseline_star_border"
        android:title="@string/selected"
        app:cnb_iconColor="@color/teal_200" />
</menu>

